[package]
name = "bamsalvage"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.2.0", features = ["derive"] }
regex = "1.7.3"
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
crc32fast = "1.3.2"
