[package]
name = "bamsalvage"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Rust version of bamsalvage, retrieving sequences from a corrupted BAM file as much as possible."
authors = ["Takaho A. Endo <takaho.endo@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/takaho/bamsalvage-rust"
repository = "https://github.com/takaho/bamsalvage-rust"
documentation = "https://github.com/takaho/bamsalvage-rust"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["bamsalvage", "BAM", "long-read", "fasta", "fastq"]

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.2.0", features = ["derive"] }
regex = "1.7.3"
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
crc32fast = "1.3.2"
